@@ -1,3 +1,8 @@
+Wed Oct 28 00:49:32 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* glib.h: G_BREAKPOINT for alpha from Robert Wilhelm
+	<robert@physiol.med.tu-muenchen.de>
+
 Tue Oct 27 07:25:53 1998  Tim Janik  <timj@gtk.org>
 
 	* glib.h:
